shopNow/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shopnow-ingress
  namespace: shopnow

spec:
  ingressClassName: traefik

  rules:
  - http:
      paths:

      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 5000

      - path: /admin
        pathType: Prefix
        backend:
          service:
            name: admin-service
            port:
              number: 80

      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
